# protobuf-nats-service-generator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/simple/: Cargo.toml  build.rs
examples/simple-stream/: Cargo.toml
examples/simple-stream/proto/: simple.proto
examples/simple-stream/src/: main.rs
examples/simple/proto/: simple.proto
examples/simple/src/: main.rs
src/: lib.rs
